// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generator - a near-miss with distinct keys is unaffected 1`] = `
"/*____ CSSForge ____*/
:root {
/*____ Primitives ____*/
/* a-b */
--a-b-c-x: 1rem;
/* a */
--a-d-c-x: 2rem;
}"
`;

exports[`generator - a near-miss with distinct keys is unaffected 2`] = `
{
  "primitives": {
    "a": {
      "d-c": {
        "x": {
          "key": "--a-d-c-x",
          "value": "2rem",
          "variable": "--a-d-c-x: 2rem;",
        },
      },
    },
    "a-b": {
      "c": {
        "x": {
          "key": "--a-b-c-x",
          "value": "1rem",
          "variable": "--a-b-c-x: 1rem;",
        },
      },
    },
  },
}
`;

exports[`generator - a single module with unique keys is unaffected 1`] = `
"/*____ CSSForge ____*/
:root {
/*____ Primitives ____*/
/* a-b */
--a-b-c-x: 1rem;
--a-b-c-y: 2rem;
}"
`;

exports[`generator - the documented light/dark/pink theming example still works 1`] = `
"/*____ CSSForge ____*/
:root {
/*____ Colors ____*/
/* Palette */
/* simple */
--palette-simple-white: oklch(100% 0 0);
--palette-simple-red: oklch(62.796% 0.25768 29.23388);
/* Themes */
/* Theme: light */
/* background */
--primary: var(--palette-simple-white);
--secondary: var(--palette-simple-white);
/* Theme: dark */
@media (prefers-color-scheme: dark) {
  /* background */
  --primary: var(--palette-simple-white);
  --secondary: var(--palette-simple-white);
}
}
/* Theme: pink */
.ThemePink {
  /* background */
  --primary: var(--palette-simple-white);
  --secondary: var(--palette-simple-white);
}"
`;

exports[`generator - variantNameOnly themes may reuse a key in different scopes 1`] = `
"/*____ CSSForge ____*/
:root {
/*____ Colors ____*/
/* Palette */
/* white */
--palette-white-x: oklch(100% 0 0);
/* Themes */
/* Theme: light */
/* background */
--primary: var(--palette-white-x);
/* Theme: dark */
@media (prefers-color-scheme: dark) {
  /* background */
  --primary: var(--palette-white-x);
}
}
/* Theme: pink */
.ThemePink {
  /* background */
  --primary: var(--palette-white-x);
}"
`;
